	- Changed the GUI for the skeleton editors
	- Added I18N support for skeleton texts
	- Current-directory setting now accepts sys. env. variables and
	the special ${EXECUTABLEPATH} variable.
	- Adds GUI support for ${EXECUTABLEPATH]}'s current directory
	- Removed dependency to libmspack by using the ms setup api
	- All temporary files are now flagged "remove on reboot" to
	Windows
	- Fixed bug preventing compilation of the executable when
	classpath is empty
	
0.9.9-2
	- Fixed missing quotes for command-line arguments
	- Fixed issue #1679934: jvm properties not defined properly when
	starting the JVM DLL.

0.9.9
	- Added a new skeleton called autodownload, that is able to
	download and install a JRE (or whatever) when no VM is available.
	- Moved the simplewrap jar to the root of the c++ library, so that
	it can be shared between simplewrap and autodownload
	- Changed the licencing of the skeleton so that it comes under the
	same terms than the LGPL
	- Improved arguments management so that jsmooth parameters can ben
	overridden by users parameters
	- Refactored the c++ code so that commonjava is now split in two
	modules, commonjava and util-core
	- Added a new c++ module called util-net. It contains mainly an
	http client
	- Updated the documentation w/ arguments mngmt
	
0.9.8
	- Fixed the classpath in JRE1.2+ VM DLL instanciation
	- Added a jvm.dll search when the location is not defined in the
	registry.
	- Fixed jvm version not taken into account when launching java.exe
	from the PATH envvar.
	- Added patch from zregvart: disable version check of the VM  when
	the VM is "bundled"
	- Added headless mode setup in cmdline, and changed mediatracked
	dependency on Canvas rather than Label (to avoid Headless
	Exceptions)
	- Fixed issues when calling jre[w]/java[w].exe with quotes in the
	pathname
	- Fixes the "version guessing" when the noconsole flag is enabled
	- Now kill all the process launched and still running on exit