@@ -1,2 +1,5 @@
 classes
 *.jar
+dist
+tmp
+*.class
